--- a/app/views/pages/getting_started_en.html.erb
+++ b/app/views/pages/getting_started_en.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Switchboard Continued</title>
+<title>Help Switchboard</title>
  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -10,27 +10,51 @@
 </head>
 <body>
 
-	<%= render "partials/userinfo" %>
+  <%= render "partials/userinfo" %>
   <%= render "partials/navbar" %>
 
-	<div class="row">
-      <div class="col-md-1">
+  <div>
+    <h1 class="text-center">Getting Started (english)<br><small>*Start Here for New Users</small></h1>
+    <hr style="height: 2px; background-color:#555; margin-top: 10px; margin-bottom: 20px; width: 50%;" />
+  </div>
+
+  <div id="main-content">
+      <div class="row">
+        <div class="col-xs-2">
+        </div>
+        <div class="col-xs-8 text-center">
+          <p>This website was launched on 1 Dec 2016. The purpose of this page is to give a brief introduction to new users. Note that while navigating through the site you will notice that the tool bar includes a help section.</p>
+        </div>
+        <div class="col-xs-2">
+        </div>
+      </div>
+  </div>
+
+  <div>
+    <hr style="height: 2px; background-color:#555; margin-top: 10px; margin-bottom: 20px; width: 75%;" />
+  </div>
+
+  <div id="main-content">
+    <div class="row">
+      <div class="col-xs-2">
       </div>
 
-    	<div class="col-md-3">
-        <h1>Switchboard ...more</h1>
-    		<h3>Background</h3>
-    		  <p>The forerunner of this website was a small program I created in Microsoft Access to track my own records. It worked ok for just me because I was able to manage my own computer. However, this was not the answer for a tool to be shared among multiple users because it would have to be reinstalled each time a program change was made. Also, there would be no way to coordinate the data being created on multiple users' desktops. Having a shared website seemed the logical solution.</p>
+      <div class="col-xs-8">
+        <h3>Background</h3>
+
+          <p>I have had a long time interest in family genealogy along with my wife and several other members of our family. This deep-rooted interest stems from our association with the <em>Church of Jesus Christ of Latter-Day Saints</em>, also known as the Mormon Church, which teaches that families are eternal. This "eternal" nature causes us to become more than causually interested in our ancestors and makes us want to discover who they are so we can have baptism and marriage ordinances performed on their behalf by someone with priesthood authority in LDS temples. This then gives our beloved ancestors the opportunity to accept these important ordinances if they choose to do so. So... for many of us doing family research is more than a passtime hobby - it is, instead, an important work!</p>
+
+          <p>When my younger sister died I helped go thru several <em>"shoe boxes in the basement"</em> of important and valuable family records (photos, journals, family names, etc.) It then occured to me that I, along with probably many of you other family members have our own <em>"shoeboxes in the basement"</em> of photos and records that are not being shared with others who would have a real interest in them. As I became more involved with organizing my own family records I saw the importance of: 1) Having a means of sharing our <em>"shoeboxes"</em> with other family members, 2) Having a system of collaboration where we can contribute to the completeness and accuracy of the combined family library, and 3) Having a way to preserve these records for future generations. I then decided to construct this website with these basic goals in mind. read <a href="pages/more_switchboard" target="_blank">more...</a></p>
+
+          <p>The forerunner of this website was a small program I created in Microsoft Access to track my own records. It worked ok for just me because I was able to manage my own computer. However, this was not the answer for a tool to be shared among multiple users because it would have to be reinstalled each time a program change was made. Also, there would be no way to coordinate the data being created on multiple users' desktops. Having a shared website seemed the logical solution.</p>
 
           <p>This is the first website I have ever tried to create and I am not very fast or good at it. I did not take on this project because of my ability to do, rather, it was my interest in accomplishing it because I felt it might actuially be usefule to others. I am hopeful that before the day comes that I am no longer able to serve as the administrator there will be someone willing to take over these duties. As you use this website it will likely become obvious to you that I am not a softwware engineer. If you find issues with this site or have suggestions for improvements feel free to contact me at: lfrohr@gmail.com.</p>
 
-          <h3>Longeivity</h3>
+          <h3>Record Keeping Longeivity</h3>
           <p>As I worked on this project a major concern arose: How can this family genealogy be preserved after I am no longer around to maintain it or if this website no longer exists? We want something that will be around for our grandchildren to use. If this information doesn't get maintained the result would be the same as leaving it in the <em>"shoe boxes in the basement"</em>.</p>
 
           <p>We should'nt expect this family website to be the final resing place for these records because this website and its management is too fragile.</p>
-        </div>
-    
-        <div id="main-content" class="col-md-4">
+
           <p>This becomes a good place for us to gather our records and proof them but its not the best place for us to keep the importance ones for ever. It is a staging area where we can remove duplications, correct errors, added new records, and freely share between ourselves. Then, whenever the contributor of important family genealogy records is confident that everything is adequately supported by source documentation, the information can be submitted to the LDS genealogy website - FamilySearch because it is a tested and proven repository that will be around for many years to come. The answer here is LDS FamilySearch!</p>
 
           <h3>LDS FamilySearch</h3>
@@ -48,18 +72,22 @@
               <li>- Our family records will be linked to millions of other records which my contain information we are missing.</li>
               <li>- As an added bonus we will each have access to additional research tools provided by FamilySearch such as birth/marriage/death records, census records, etc.</li>
             </Ul></p>
-        </div>
 
-        <div id="main-content" class="col-md-3">
         <h3>Help Files</h3>
-    		<p>There are two types of help files accessible from the "Help" button on the navigation bar. One of the help features is a "How To" designed to let you select answers to select questions about the important functionality of the website. A second feature ia a "This Page" help reference which give you and overview of the features of the page you are currently on. An example of this is the "This Page" help found on the Switchboard page. It cantains an overview of the site. You can view this help page... here.</p>
+        <p>There are two types of help files accessible from the "Help" button on the navigation bar. One of the help features is a "How To" designed to let you select answers to select questions about the important functionality of the website. A second feature ia a "This Page" help reference which give you and overview of the features of the page you are currently on. An example of this is the "This Page" help found on the Switchboard page. It cantains an overview of the site. You can view this help page... here.</p>
 
         <h3>Permissions</h3>
         <p>When an account is created for each new user a permission is also granted (either, Read, Change or Admin). After the user logs ini in he can see what the system has defined as his permission by looking at the user information banner displayed accross the top of each page. "Change" permission is granted based on the user's need and proffeciency in using the database. These are some of the measures taken to protect the integrity of the information you put into the database.</p>
         </div>   
-        <div class="col-md-1">
+        <div class="col-xs-2">
         </div>      
-    </div>
+
+      </div>
+
+      <div class="col-xs-2">
+      </div>      
+    </div><!--end row #1-->
+  </div><!--end main content-->
 
 </body>
 </html>
