--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,5 +1,8 @@
+<div>
+    <hr style="height: 2px; background-color:#555; margin-top: 10px; margin-bottom: 20px; width: 75%;" />
+ </div>
+
 <div id="footer" style = "margin-top: 0em;" >
-	<p class="text-center">...</p>
-   	<p id="contactadmin_en" class="text-center" style = "margin: 0em;">To request your permissions to be upgraded contact the admin at: <a href="http://lfrohr@gmail.com">lfrohr@gmail.com</a></p>
-   	<p id="contactadmin_sp" class="text-center" style = "margin: 0em;">(Para solicitar sus permisos para estar actualizado de contacto del administrador en: <a href="http://lfrohr@gmail.com">lfrohr@gmail.com)</a></p>
+   	<p id="contactadmin_en" class="text-center" style = "margin: 0em;">Report problems with this website to the <a href="http://lfrohr@gmail.com">Administrator</a>.</p>
+   	<p id="contactadmin_sp" class="text-center" style = "margin: 0em;">(Notificar problemas relacionados con este sitio web al <a href="http://lfrohr@gmail.com">Administrador</a>).</p>
 </div>
