--- a/app/views/partials/_userinfo.html.erb
+++ b/app/views/partials/_userinfo.html.erb
@@ -1,1 +1,1 @@
-<p class="text-center" style = "color: 		#C0C0C0;">{user: Larry Francis Rohr - PIN: 7348 - permision: Admin - Language: English}</p>
+<p class="text-center" style = "color: 		#C0C0C0;">{User: <em>Larry Francis Rohr</em>&nbsp/&nbspPIN: <em>7348</em>&nbsp/&nbspGroup: <em>Rohr</em> / Permision: <em>Admin</em>&nbsp/ Language: <em>English</em>}</p>
