--- a/app/assets/stylesheets/mystyles.css.scss
+++ b/app/assets/stylesheets/mystyles.css.scss
@@ -5,22 +5,27 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/* ===VARIABLES=== ***************************/
+$lightGray: #999;
+/* ===END VARIABLES=== ***/
+
+
 #logo {
-float: left;
-margin-right: 10px;
-font-size: 1.7em;
-color: #fff;
-text-transform: uppercase;
-letter-spacing: -1px;
-padding-top: 9px;
-font-weight: bold;
-line-height: 1;
+	float: left;
+	margin-right: 10px;
+	font-size: 1.7em;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: -1px;
+	padding-top: 9px;
+	font-weight: bold;
+	line-height: 1;
+	&:hover {
+		color: #fff;
+		text-decoration: none;
+	}
 }
 
-#logo:hover {
-color: #fff;
-text-decoration: none;
-}
 
 /* ===UNIVERSAL=== ***************************/
 html {
@@ -36,13 +41,14 @@ overflow: auto;
 textarea {
 resize: vertical;
 }
+
 .center {
-text-align: center;
+	text-align: center;
+	h1 {
+	margin-bottom: 10px;
+	}
 }
-.center h1 {
-margin-bottom: 10px;
-}
-Figure
+
 /* ===END UNIVERSAL=== ***/
 
 /* ===TYPOGRAPHY=== ******************************/
@@ -63,7 +69,7 @@ letter-spacing: -1px;
 margin-bottom: 30px;
 text-align: center;
 font-weight: normal;
-color: #999;
+color: $lightGray;
 }
 
 p {
@@ -85,3 +91,29 @@ p.bulletin {
     font-style: italic;
     background-color: yellow;
 }
+
+/* ===FOOTER=== */
+footer {
+	margin-top: 45px;
+	padding-top: 5px;
+	border-top: 1px solid #eaeaea;
+	color: $lightGray;
+	a {
+		color: #555;
+		&:hover {
+		color: #222;
+	}
+}
+small {
+	float: left;
+}
+ul {
+	float: right;
+	list-style: none;
+	li {
+		float: left;
+		margin-left: 10px;
+	}
+  }
+}
+/* ===END FOOTER=== */
