--- a/app/views/pages/sample2.html.erb
+++ b/app/views/pages/sample2.html.erb
@@ -1,11 +1,34 @@
-<div class="row">
+<DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="family website">
+    <meta name="author" content="larry rohr">
+    
+    <title>TOC</title>
+
+    <!--<link rel="icon" href="../favicon.ico">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../css/mystyles.css"><!-- reference last to give it priority -->
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+</head>
+<body>
+	<div class="row">
     <div class="col-xs-3">
     </div>
 
     <div class="col-xs-6">
       <div class = "btn-toolbar" style="margin-left:180px;">
         <div class="dropdown">
-          <button class="btn btn-primary btn-sm" type="button" style = "margin: 0px 2px 0px 0px;"><img src="/myimages/back.png" alt="Home" width="20" height="20" /></button><!--href="javascript:history.go(-1)"-->
+          <button class="btn btn-primary btn-sm" type="button" style = "margin: 0px 2px 0px 0px;"><img src="/myimages/back.png" alt="Home" width="20" height="20" /></button>
         </div>
 
         <div class="dropdown">
@@ -17,7 +40,7 @@
           <img src="/myimages/help.png" alt="Help" width="20" height="20" />&nbsp&nbsp&nbsp<span class="caret"></span></button>
           <ul class="dropdown-menu">
             <li><a tabindex="-1" href="/pages/help_switchboard_en">Help - This Page (Ayuda -Esta Página)</a></li> 
-            <li><a tabindex="-1" href="/pages/help_howto_en">Help "How To" ("Ayuda Cómo")</a></li>
+            <li><a tabindex="-1" href="#">Help "How To" ("Ayuda Cómo")</a></li>
           </ul>
         </div>
 
@@ -116,3 +139,27 @@
   </div>
 
 </div><!--end row div-->
+
+<script>
+$(document).ready(function(){
+  $('.dropdown-submenu a.test').on("click", function(e){
+    $(this).next('ul').toggle();
+    e.stopPropagation();
+    e.preventDefault();
+  });
+});
+</script>
+    <!-- ============Placed at the end of the document so the pages load faster =========-->
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/ie10-viewport-bug-workaround.js"></script><!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</body>
+</html>
